[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/healthbar.png" type="Texture" id=1]
[ext_resource path="res://Art/heart.png" type="Texture" id=2]
[ext_resource path="res://Art/inventory.png" type="Texture" id=3]
[ext_resource path="res://Art/line.png" type="Texture" id=4]
[ext_resource path="res://Code/MusicSheetLine.gd" type="Script" id=5]
[ext_resource path="res://Art/arrowLeft.png" type="Texture" id=6]
[ext_resource path="res://Art/arrowDown.png" type="Texture" id=7]
[ext_resource path="res://Art/arrowUp.png" type="Texture" id=8]
[ext_resource path="res://Art/arrowRight.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 32 )

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 1536.0
margin_bottom = 102.0
texture = ExtResource( 1 )
patch_margin_right = 1309

[node name="Heart1" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.049
anchor_top = 0.39
anchor_right = 0.049
anchor_bottom = 0.39
margin_left = -61.0
margin_top = -30.5
margin_bottom = 30.5
texture = ExtResource( 2 )
expand = true

[node name="Heart2" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.099
anchor_top = 0.39
anchor_right = 0.099
anchor_bottom = 0.39
margin_left = -61.0
margin_top = -30.5
margin_bottom = 30.5
texture = ExtResource( 2 )
expand = true

[node name="Heart3" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.15
anchor_top = 0.39
anchor_right = 0.15
anchor_bottom = 0.39
margin_left = -61.0
margin_top = -30.5
margin_bottom = 30.5
texture = ExtResource( 2 )
expand = true

[node name="MusicSheet" type="NinePatchRect" parent="."]
margin_top = 651.0
margin_right = 520.0
margin_bottom = 818.0
texture = ExtResource( 3 )

[node name="Note1" type="Sprite" parent="MusicSheet"]
position = Vector2( 85, 145 )
texture = ExtResource( 6 )

[node name="Note2" type="Sprite" parent="MusicSheet"]
position = Vector2( 179, 125 )
texture = ExtResource( 8 )

[node name="Note3" type="Sprite" parent="MusicSheet"]
position = Vector2( 287, 135 )
texture = ExtResource( 9 )

[node name="Note4" type="Sprite" parent="MusicSheet"]
position = Vector2( 391, 145 )
texture = ExtResource( 7 )

[node name="MusicSheetLine" type="KinematicBody2D" parent="MusicSheet"]
position = Vector2( 85, 135 )
scale = Vector2( 1, 0.9 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="MusicSheet/MusicSheetLine"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicSheet/MusicSheetLine"]
shape = SubResource( 1 )
